properties + address APIs
